gen/TeX2SymParser.py
# Generated from C:\Users\Akira\Documents\python_code\github\antlr4_tex2sym\TeX2Sym.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class TeX2SymParser ( Parser ):

    grammarFileName = "TeX2Sym.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\ppi'", "'\\ii'", 
                     "'\\ee'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'\\left|'", "'\\right|'", "<INVALID>", "'\\div'", 
                     "'+'", "'-'", "'^'", "'_'", "'!'", "'\\frac{d'", "'\\int'", 
                     "<INVALID>", "<INVALID>", "'\\sqrt'", "'\\sin'", "'\\cos'", 
                     "'\\tan'", "'\\log'", "'\\frac'", "'\\sum'", "'\\lim'", 
                     "'\\to'", "'\\infty'", "'\\C'", "'\\P'", "<INVALID>", 
                     "'f('", "'\\Gamma('", "'\\zeta('", "'='", "'<'", "'\\leqq'", 
                     "'>'", "'\\geqq'" ]

    symbolicNames = [ "<INVALID>", "GREEK", "ALPHABET", "FLOAT", "INT", 
                      "NEWLINE", "WS", "PI", "IMAGINARY_UNIT", "NAPIER_CONSTANT", 
                      "L_PAREN", "R_PAREN", "L_BRACE", "R_BRACE", "L_BRACKET", 
                      "R_BRACKET", "L_PIPE", "R_PIPE", "MULT", "DIV", "PLUS", 
                      "MINUS", "CARET", "UB", "FACTORIAL", "DIFF", "INTEGRATE", 
                      "DX", "DGREEK", "SQRT", "SIN", "COS", "TAN", "LOG", 
                      "FRAC", "SUM", "LIM", "TO", "INFTY", "COMBI", "PERMU", 
                      "SEQ_TERM", "FUNCTION", "GAMMAF", "ZETAF", "EQUAL", 
                      "LT", "LEQQ", "GT", "GEQQ" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_expr = 2

    ruleNames =  [ "prog", "stat", "expr" ]

    EOF = Token.EOF
    GREEK=1
    ALPHABET=2
    FLOAT=3
    INT=4
    NEWLINE=5
    WS=6
    PI=7
    IMAGINARY_UNIT=8
    NAPIER_CONSTANT=9
    L_PAREN=10
    R_PAREN=11
    L_BRACE=12
    R_BRACE=13
    L_BRACKET=14
    R_BRACKET=15
    L_PIPE=16
    R_PIPE=17
    MULT=18
    DIV=19
    PLUS=20
    MINUS=21
    CARET=22
    UB=23
    FACTORIAL=24
    DIFF=25
    INTEGRATE=26
    DX=27
    DGREEK=28
    SQRT=29
    SIN=30
    COS=31
    TAN=32
    LOG=33
    FRAC=34
    SUM=35
    LIM=36
    TO=37
    INFTY=38
    COMBI=39
    PERMU=40
    SEQ_TERM=41
    FUNCTION=42
    GAMMAF=43
    ZETAF=44
    EQUAL=45
    LT=46
    LEQQ=47
    GT=48
    GEQQ=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(TeX2SymParser.StatContext,0)


        def getRuleIndex(self):
            return TeX2SymParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = TeX2SymParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 6
            self.stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TeX2SymParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EqualContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def EQUAL(self):
            return self.getToken(TeX2SymParser.EQUAL, 0)
        def NEWLINE(self):
            return self.getToken(TeX2SymParser.NEWLINE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual" ):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(TeX2SymParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(TeX2SymParser.NEWLINE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.StatContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def NEWLINE(self):
            return self.getToken(TeX2SymParser.NEWLINE, 0)
        def LT(self):
            return self.getToken(TeX2SymParser.LT, 0)
        def GT(self):
            return self.getToken(TeX2SymParser.GT, 0)
        def LEQQ(self):
            return self.getToken(TeX2SymParser.LEQQ, 0)
        def GEQQ(self):
            return self.getToken(TeX2SymParser.GEQQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelation" ):
                return visitor.visitRelation(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = TeX2SymParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 21
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = TeX2SymParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 8
                self.expr(0)
                self.state = 9
                self.match(TeX2SymParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = TeX2SymParser.EqualContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 11
                self.expr(0)
                self.state = 12
                self.match(TeX2SymParser.EQUAL)
                self.state = 13
                self.expr(0)
                self.state = 14
                self.match(TeX2SymParser.NEWLINE)
                pass

            elif la_ == 3:
                localctx = TeX2SymParser.RelationContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 16
                self.expr(0)
                self.state = 17
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TeX2SymParser.LT) | (1 << TeX2SymParser.LEQQ) | (1 << TeX2SymParser.GT) | (1 << TeX2SymParser.GEQQ))) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 18
                self.expr(0)
                self.state = 19
                self.match(TeX2SymParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TeX2SymParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def L_PAREN(self):
            return self.getToken(TeX2SymParser.L_PAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(TeX2SymParser.ExprContext,0)

        def R_PAREN(self):
            return self.getToken(TeX2SymParser.R_PAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class MultContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def MULT(self):
            return self.getToken(TeX2SymParser.MULT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMult" ):
                return visitor.visitMult(self)
            else:
                return visitor.visitChildren(self)


    class SqrtnContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SQRT(self):
            return self.getToken(TeX2SymParser.SQRT, 0)
        def L_BRACKET(self):
            return self.getToken(TeX2SymParser.L_BRACKET, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def R_BRACKET(self):
            return self.getToken(TeX2SymParser.R_BRACKET, 0)
        def L_BRACE(self):
            return self.getToken(TeX2SymParser.L_BRACE, 0)
        def R_BRACE(self):
            return self.getToken(TeX2SymParser.R_BRACE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqrtn" ):
                return visitor.visitSqrtn(self)
            else:
                return visitor.visitChildren(self)


    class TrignContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.func = None # Token
            self.copyFrom(ctx)

        def CARET(self):
            return self.getToken(TeX2SymParser.CARET, 0)
        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.L_BRACE)
            else:
                return self.getToken(TeX2SymParser.L_BRACE, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.R_BRACE)
            else:
                return self.getToken(TeX2SymParser.R_BRACE, i)
        def SIN(self):
            return self.getToken(TeX2SymParser.SIN, 0)
        def COS(self):
            return self.getToken(TeX2SymParser.COS, 0)
        def TAN(self):
            return self.getToken(TeX2SymParser.TAN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrign" ):
                return visitor.visitTrign(self)
            else:
                return visitor.visitChildren(self)


    class SumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SUM(self):
            return self.getToken(TeX2SymParser.SUM, 0)
        def UB(self):
            return self.getToken(TeX2SymParser.UB, 0)
        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.L_BRACE)
            else:
                return self.getToken(TeX2SymParser.L_BRACE, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def EQUAL(self):
            return self.getToken(TeX2SymParser.EQUAL, 0)
        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.R_BRACE)
            else:
                return self.getToken(TeX2SymParser.R_BRACE, i)
        def CARET(self):
            return self.getToken(TeX2SymParser.CARET, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum" ):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)


    class Combi_permuContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.cp = None # Token
            self.copyFrom(ctx)

        def UB(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.UB)
            else:
                return self.getToken(TeX2SymParser.UB, i)
        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.L_BRACE)
            else:
                return self.getToken(TeX2SymParser.L_BRACE, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.R_BRACE)
            else:
                return self.getToken(TeX2SymParser.R_BRACE, i)
        def COMBI(self):
            return self.getToken(TeX2SymParser.COMBI, 0)
        def PERMU(self):
            return self.getToken(TeX2SymParser.PERMU, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCombi_permu" ):
                return visitor.visitCombi_permu(self)
            else:
                return visitor.visitChildren(self)


    class AlphabetContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ALPHABET(self):
            return self.getToken(TeX2SymParser.ALPHABET, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlphabet" ):
                return visitor.visitAlphabet(self)
            else:
                return visitor.visitChildren(self)


    class FloatContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(TeX2SymParser.FLOAT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat" ):
                return visitor.visitFloat(self)
            else:
                return visitor.visitChildren(self)


    class BracesContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def L_BRACE(self):
            return self.getToken(TeX2SymParser.L_BRACE, 0)
        def expr(self):
            return self.getTypedRuleContext(TeX2SymParser.ExprContext,0)

        def R_BRACE(self):
            return self.getToken(TeX2SymParser.R_BRACE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBraces" ):
                return visitor.visitBraces(self)
            else:
                return visitor.visitChildren(self)


    class DivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def DIV(self):
            return self.getToken(TeX2SymParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv" ):
                return visitor.visitDiv(self)
            else:
                return visitor.visitChildren(self)


    class LimContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LIM(self):
            return self.getToken(TeX2SymParser.LIM, 0)
        def UB(self):
            return self.getToken(TeX2SymParser.UB, 0)
        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.L_BRACE)
            else:
                return self.getToken(TeX2SymParser.L_BRACE, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def TO(self):
            return self.getToken(TeX2SymParser.TO, 0)
        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.R_BRACE)
            else:
                return self.getToken(TeX2SymParser.R_BRACE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLim" ):
                return visitor.visitLim(self)
            else:
                return visitor.visitChildren(self)


    class PlusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PLUS(self):
            return self.getToken(TeX2SymParser.PLUS, 0)
        def expr(self):
            return self.getTypedRuleContext(TeX2SymParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlusExpr" ):
                return visitor.visitPlusExpr(self)
            else:
                return visitor.visitChildren(self)


    class Diffn1Context(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.dxg = None # Token
            self.copyFrom(ctx)

        def L_PAREN(self):
            return self.getToken(TeX2SymParser.L_PAREN, 0)
        def DIFF(self):
            return self.getToken(TeX2SymParser.DIFF, 0)
        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.R_BRACE)
            else:
                return self.getToken(TeX2SymParser.R_BRACE, i)
        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.L_BRACE)
            else:
                return self.getToken(TeX2SymParser.L_BRACE, i)
        def R_PAREN(self):
            return self.getToken(TeX2SymParser.R_PAREN, 0)
        def CARET(self):
            return self.getToken(TeX2SymParser.CARET, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def DX(self):
            return self.getToken(TeX2SymParser.DX, 0)
        def DGREEK(self):
            return self.getToken(TeX2SymParser.DGREEK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiffn1" ):
                return visitor.visitDiffn1(self)
            else:
                return visitor.visitChildren(self)


    class Diffn2Context(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.dxg = None # Token
            self.copyFrom(ctx)

        def DIFF(self):
            return self.getToken(TeX2SymParser.DIFF, 0)
        def CARET(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.CARET)
            else:
                return self.getToken(TeX2SymParser.CARET, i)
        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.L_BRACE)
            else:
                return self.getToken(TeX2SymParser.L_BRACE, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.R_BRACE)
            else:
                return self.getToken(TeX2SymParser.R_BRACE, i)
        def DX(self):
            return self.getToken(TeX2SymParser.DX, 0)
        def DGREEK(self):
            return self.getToken(TeX2SymParser.DGREEK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiffn2" ):
                return visitor.visitDiffn2(self)
            else:
                return visitor.visitChildren(self)


    class FunctionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNCTION(self):
            return self.getToken(TeX2SymParser.FUNCTION, 0)
        def expr(self):
            return self.getTypedRuleContext(TeX2SymParser.ExprContext,0)

        def R_PAREN(self):
            return self.getToken(TeX2SymParser.R_PAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)


    class PowerContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def CARET(self):
            return self.getToken(TeX2SymParser.CARET, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPower" ):
                return visitor.visitPower(self)
            else:
                return visitor.visitChildren(self)


    class MullContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMull" ):
                return visitor.visitMull(self)
            else:
                return visitor.visitChildren(self)


    class DintegrateContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.dxg = None # Token
            self.copyFrom(ctx)

        def INTEGRATE(self):
            return self.getToken(TeX2SymParser.INTEGRATE, 0)
        def UB(self):
            return self.getToken(TeX2SymParser.UB, 0)
        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.L_BRACE)
            else:
                return self.getToken(TeX2SymParser.L_BRACE, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.R_BRACE)
            else:
                return self.getToken(TeX2SymParser.R_BRACE, i)
        def CARET(self):
            return self.getToken(TeX2SymParser.CARET, 0)
        def DX(self):
            return self.getToken(TeX2SymParser.DX, 0)
        def DGREEK(self):
            return self.getToken(TeX2SymParser.DGREEK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDintegrate" ):
                return visitor.visitDintegrate(self)
            else:
                return visitor.visitChildren(self)


    class FracContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FRAC(self):
            return self.getToken(TeX2SymParser.FRAC, 0)
        def L_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.L_BRACE)
            else:
                return self.getToken(TeX2SymParser.L_BRACE, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def R_BRACE(self, i:int=None):
            if i is None:
                return self.getTokens(TeX2SymParser.R_BRACE)
            else:
                return self.getToken(TeX2SymParser.R_BRACE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrac" ):
                return visitor.visitFrac(self)
            else:
                return visitor.visitChildren(self)


    class MinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(TeX2SymParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(TeX2SymParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinusExpr" ):
                return visitor.visitMinusExpr(self)
            else:
                return visitor.visitChildren(self)


    class GreekContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def GREEK(self):
            return self.getToken(TeX2SymParser.GREEK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreek" ):
                return visitor.visitGreek(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TeX2SymParser.ExprContext)
            else:
                return self.getTypedRuleContext(TeX2SymParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(TeX2SymParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(TeX2SymParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class DiffContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TeX2SymParser.ExprContext
            super().__init__(parser)
            self.dxg = None # Token
            self.copyFrom(ctx)

